--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -10,12 +10,14 @@
         android:id="@+id/textView11"
         android:layout_width="68dp"
         android:layout_height="32dp"
-        android:layout_marginLeft="14dp"
-        android:text="TextView"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/course_name"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_course_name"
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:text="@string/course_name" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_course_info"
@@ -33,7 +35,7 @@
     <EditText
         android:id="@+id/tv_add_course_name"
         android:layout_width="145dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
@@ -55,10 +57,10 @@
         android:text="@string/completed"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline8"
-        app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintVertical_bias="0.4" />
 
     <android.support.constraint.Guideline
@@ -79,22 +81,29 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="28dp"
         android:text="@string/select_class"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="201dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/et_add_course_class_name"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/et_add_course_class_name"
         android:layout_width="148dp"
-        android:layout_height="38dp"
-        android:layout_marginRight="91dp"
-        android:drawableRight="@drawable/ic_add_circle_red_300_24dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+
         android:ems="10"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/rv_add_course_class"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintLeft_toRightOf="@+id/textView10"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="201dp" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_add_course_name"
+        app:layout_constraintVertical_bias="0.68" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_add_course_class"
@@ -107,5 +116,21 @@
         app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_add_course_add_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/ic_add_circle_red_300_24dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline8"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/et_add_course_class_name"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.774" />
 
 </android.support.constraint.ConstraintLayout>
