--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -13,20 +13,18 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_weight="0.33"
         android:gravity="center"
         android:textSize="22sp"
         tools:text="1" />
 
     <TextView
         android:id="@+id/tv_course_item_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_toRightOf="@id/tv_course_item_number"
-        android:layout_weight="0.33"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:text="大学物理"
         android:textSize="18sp" />
 
