--- a/app/src/main/res/menu/student_course_sign.xml
+++ b/app/src/main/res/menu/student_course_sign.xml
@@ -2,12 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <item
-        android:id="@+id/id_menu_student_setting"
-        android:icon="@drawable/ic_check_white_24dp"
+        android:id="@+id/id_student_course_sign_menu_check"
+        android:icon="@drawable/ic_remove_red_eye_white_24dp"
         android:orderInCategory="100"
-        android:title="@string/setting"
-        app:showAsAction="collapseActionView" />
-
+        android:title="@string/save"
+        app:showAsAction="always" />
 </menu>
