--- a/app/src/main/res/layout/fragment_student_sign.xml
+++ b/app/src/main/res/layout/fragment_student_sign.xml
@@ -36,11 +36,10 @@
 
 
     <ImageView
-        android:visibility="gone"
         android:id="@+id/iv_sign_defaullt"
-        android:layout_width="188dp"
-        android:layout_height="179dp"
-        app:srcCompat="@mipmap/ic_launcher_round"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        app:srcCompat="@drawable/ic_search"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
@@ -49,7 +48,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_student_sign"
-        app:layout_constraintVertical_bias="0.484" />
+        app:layout_constraintVertical_bias="0.481" />
 
     <ViewStub
         android:id="@+id/viewStub"
