--- a/app/src/main/res/layout/activity_select_identity.xml
+++ b/app/src/main/res/layout/activity_select_identity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,29 +24,29 @@
         android:id="@+id/tv_identity_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="111dp"
         android:text="@string/i_am"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_identity_school"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_course_info" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_course_info"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_below="@+id/guideline14"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/tv_identity_school"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="202dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline14"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:text="@string/bkuv" />
+        tools:text="@string/bkuv"
+        android:layout_below="@+id/tv_identity_tip"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline14"
@@ -63,8 +63,8 @@
         app:layout_constraintGuide_begin="80dp" />
 
     <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="289dp"
@@ -78,10 +78,8 @@
         <RelativeLayout
             android:layout_width="194dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@+id/guideline14"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -112,4 +110,4 @@
                 android:text="@string/teacher" />
         </RelativeLayout>
     </RadioGroup>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
