--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -14,21 +14,17 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="5dp"
-        android:background="@color/colorAccent" />
-
     <TextView
 
         android:id="@+id/tv_change_pwd_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar_change_pwd"
-        android:layout_marginTop="20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar_change_pwd"
+        android:layout_marginLeft="7dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="43dp"
         android:padding="9dp"
         android:text="@string/password"
         android:textColor="@android:color/black"
@@ -65,9 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/et_change_pwd_sure_pwd"
-        android:layout_alignTop="@id/tv_change_pwd_password"
+        android:layout_alignTop="@+id/tv_change_pwd_password"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/tv_change_pwd_password"
         android:hint="@string/input_password"
         android:inputType="textPassword"
