--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,6 +4,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--<include layout="@layout/" />-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_check_course_info"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginTop="0dp"
+        android:background="@color/colorPrimary"
+        android:elevation="8dp"
+        android:theme="@style/ActionMenuWhiteTitle" />
 
+    <include layout="@layout/layout_change_password_item" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/colorAccent" />
+
+    <include layout="@layout/layout_feedback_item" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/colorAccent" />
+
+    <include layout="@layout/layout_check_person_info_item" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/colorAccent" />
+
+    <include layout="@layout/layout_share_item" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/colorAccent" />
+
+    <include layout="@layout/layout_setting_version_item" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/colorAccent" />
 </LinearLayout>
