--- a/app/src/main/res/layout/layout_setting_version_item.xml
+++ b/app/src/main/res/layout/layout_setting_version_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/id_layout_setting_version"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,15 +18,16 @@
         android:textSize="18sp" />
 
     <TextView
+        android:id="@+id/tv_setting_version"
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
         android:layout_below="@id/id_layout_setting_version_title_tv"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="Version :1.0" />
+        tools:text="Version :1.0" />
 
     <ImageView
+        android:id="@+id/iv_setting_version_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
